# interview-prompt-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/interview_prompt_agent/: __init__.py  agent.py  cli.py  config.py  errors.py  factories.py  models.py  text.py
src/interview_prompt_agent/audio/: __init__.py  live.py  wav.py
src/interview_prompt_agent/followup/: __init__.py  base.py  lmstudio.py  static.py
src/interview_prompt_agent/session/: __init__.py  writer.py
src/interview_prompt_agent/stt/: base.py  moonshine_streaming.py  sherpa_onnx.py  whisper_cpp.py
src/interview_prompt_agent/tts/: base.py  chatterbox_turbo.py  kokoro.py  macos_say.py  sherpa.py
src/interview_prompt_agent/vad/: __init__.py  base.py  ten.py
tests/: test_agent.py  test_chatterbox_turbo.py  test_cli.py  test_factories.py  test_kokoro.py  test_live_audio.py  test_lmstudio.py  test_moonshine_streaming.py  test_session_writer.py  test_sherpa_onnx.py  test_sherpa_tts.py  test_static_followup.py  test_text.py  test_whisper_cpp.py
