[project]
name = "interview-prompt-agent"
version = "0.1.0"
description = "Local interview-style voice prompt agent with explicit turn completion."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
keywords = ["audio", "agents", "stt", "tts", "vad", "voice"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]
live = [
  "numpy>=2.0.2",
  "sounddevice>=0.4.6",
]

[project.scripts]
interview-agent = "interview_prompt_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interview_prompt_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
